[gd_scene load_steps=9 format=2]

[ext_resource path="res://screens/popUps/pause.gd" type="Script" id=1]
[ext_resource path="res://sprites/images/close.png" type="Texture" id=2]
[ext_resource path="res://sprites/images/whiteBackground.png" type="Texture" id=3]
[ext_resource path="res://sprites/texts/MenuInicial.png" type="Texture" id=4]
[ext_resource path="res://sprites/texts/Reiniciar.png" type="Texture" id=5]
[ext_resource path="res://sprites/images/soundOn.png" type="Texture" id=6]
[ext_resource path="res://sprites/texts/Sair.png" type="Texture" id=7]


[sub_resource type="Animation" id=1]
resource_name = "Pausemenu"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("menuInicialButton:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -29.9286, -318.33 ), Vector2( -606.323, -318.33 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("menuInicialButton:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("menuInicialButton/Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 225.824, 31.2888 ), Vector2( 225.824, 31.2888 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("menuInicialButton/Sprite:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("menuInicialButton/MenuInicial:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -17.3452, -6.12177 ), Vector2( -17.3452, -6.12177 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("menuInicialButton/MenuInicial:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("reiniciarButton:rect_position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -29.9286, -233.986 ), Vector2( 475.386, -233.986 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("reiniciarButton:self_modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("reiniciarButton/Sprite:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 225.824, 31.2888 ), Vector2( 225.824, 31.2888 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("reiniciarButton/Sprite:self_modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("reiniciarButton/Reiniciar:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -18.6369, -6.05383 ), Vector2( -18.6369, -6.05383 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("reiniciarButton/Reiniciar:self_modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("musicButton:rect_position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -29.9286, -148.282 ), Vector2( -599.861, -148.282 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("musicButton:self_modulate")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("musicButton/Sprite:position")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 225.824, 31.2888 ), Vector2( 225.824, 31.2888 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("musicButton/Sprite:self_modulate")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/16/type = "value"
tracks/16/path = NodePath("musicButton/musicButton:position")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -17.6909, -5.33557 ), Vector2( -17.6909, -5.33557 ) ]
}
tracks/17/type = "value"
tracks/17/path = NodePath("musicButton/musicButton:self_modulate")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"times": PoolRealArray( 0, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/18/type = "value"
tracks/18/path = NodePath("ColorRect:self_modulate")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/keys = {
"times": PoolRealArray( 0, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/19/type = "value"
tracks/19/path = NodePath("close:self_modulate")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/20/type = "value"
tracks/20/path = NodePath("sairButton2:rect_position")
tracks/20/interp = 1
tracks/20/loop_wrap = true
tracks/20/imported = false
tracks/20/enabled = true
tracks/20/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -29.9286, -59.467 ), Vector2( 435.323, -59.467 ) ]
}
tracks/21/type = "value"
tracks/21/path = NodePath("sairButton2:self_modulate")
tracks/21/interp = 1
tracks/21/loop_wrap = true
tracks/21/imported = false
tracks/21/enabled = true
tracks/21/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/22/type = "value"
tracks/22/path = NodePath("sairButton2/sair:position")
tracks/22/interp = 1
tracks/22/loop_wrap = true
tracks/22/imported = false
tracks/22/enabled = true
tracks/22/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -18.5543, -6.66324 ), Vector2( -18.5543, -6.66324 ) ]
}
tracks/23/type = "value"
tracks/23/path = NodePath("sairButton2/sair:self_modulate")
tracks/23/interp = 1
tracks/23/loop_wrap = true
tracks/23/imported = false
tracks/23/enabled = true
tracks/23/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/24/type = "value"
tracks/24/path = NodePath("sairButton2/Sprite:self_modulate")
tracks/24/interp = 1
tracks/24/loop_wrap = true
tracks/24/imported = false
tracks/24/enabled = true
tracks/24/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Node2D" type="Node2D"]
position = Vector2( 311.46, 479.467 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -315.0
margin_top = -480.226
margin_right = 713.0
margin_bottom = 121.774
color = Color( 0.00392157, 0, 0, 0.905882 )

[node name="close" type="TouchScreenButton" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 641.001, -466.567 )
scale = Vector2( 0.376, 0.376 )
normal = ExtResource( 2 )

[node name="menuInicialButton" type="ColorRect" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -606.323
margin_top = -318.33
margin_right = -154.323
margin_bottom = -256.33
color = Color( 1, 1, 1, 0.478431 )

[node name="MenuInicial" type="TouchScreenButton" parent="menuInicialButton"]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( -17.3452, -6.12177 )
scale = Vector2( 0.441399, 0.159452 )
normal = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="menuInicialButton"]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 225.824, 31.2888 )
scale = Vector2( 0.248, 0.248 )
texture = ExtResource( 4 )

[node name="reiniciarButton" type="ColorRect" parent="."]
editor/display_folded = true
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 475.386
margin_top = -233.986
margin_right = 927.386
margin_bottom = -171.986
color = Color( 1, 1, 1, 0.478431 )

[node name="Reiniciar" type="TouchScreenButton" parent="reiniciarButton"]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( -18.6369, -6.05383 )
scale = Vector2( 0.442035, 0.154968 )
normal = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="reiniciarButton"]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 225.824, 31.2888 )
scale = Vector2( 0.248, 0.248 )
texture = ExtResource( 5 )

[node name="musicButton" type="ColorRect" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -599.861
margin_top = -148.282
margin_right = -147.861
margin_bottom = -86.2818
color = Color( 1, 1, 1, 0.478431 )

[node name="musicButton" type="TouchScreenButton" parent="musicButton"]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( -17.6909, -5.33557 )
scale = Vector2( 0.4408, 0.153421 )
normal = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="musicButton"]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 225.824, 31.2888 )
scale = Vector2( 0.309, 0.309 )
texture = ExtResource( 6 )

[node name="sairButton2" type="ColorRect" parent="."]
editor/display_folded = true
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 435.323
margin_top = -59.467
margin_right = 887.322
margin_bottom = 2.5332
color = Color( 1, 1, 1, 0.478431 )

[node name="sair" type="TouchScreenButton" parent="sairButton2"]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( -18.5543, -6.66324 )
scale = Vector2( 0.441958, 0.154825 )
normal = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="sairButton2"]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 234.351, 29.7727 )
scale = Vector2( 0.248, 0.248 )
texture = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Pausemenu = SubResource( 1 )

[connection signal="pressed" from="close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="menuInicialButton/MenuInicial" to="." method="_on_menuInicial_pressed"]
[connection signal="pressed" from="reiniciarButton/Reiniciar" to="." method="_on_jogarNovamente_pressed"]
[connection signal="pressed" from="musicButton/musicButton" to="." method="_on_musicButton_pressed"]
[connection signal="pressed" from="sairButton2/sair" to="." method="_on_sair_pressed"]
